--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.3",
     "luxon": "^2.3.1",
     "method-override": "^3.0.0",
+    "mongodb": "^4.4.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
