--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "luxon": "^2.3.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
