--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "luxon": "^2.3.1",
     "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
