--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   }
 }
